<resources>
    <string name="app_name">NavigationActivityMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_menu">Меню</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_busket">Корзина</string>
    <string name="menu_history">История заказов</string>
    <string name="menu_conditions">Условия доставки</string>
    <string name="menu_company">О компании</string>
    <string name="menu_partnership">Партнерство</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>